098_bst_map/errors.txt
Grading at 11/11/2021:20:27:37.326381
For commit ID 716dae168346b20f1e3cbd42a6901aa2f575c115
Grading at Thu Nov 11 15:27:36 EST 2021
-----------------------------------------------
testcase 1 : Testing with BstMap<int,int>
...compiling...
In file included from 89-tester.cpp:1:0:
bstmap.h: In instantiation of ‘BstMap<K, V>& BstMap<K, V>::operator=(const BstMap<K, V>&) [with K = int; V = int]’:
89-tester.cpp:131:10:   required from here
bstmap.h:80:18: error: ‘delete_tree’ was not declared in this scope
       delete_tree(this->root);
       ~~~~~~~~~~~^~~~~~~~~~~~
bstmap.h:80:18: note: suggested alternative: ‘deleteTree’
       delete_tree(this->root);
       ~~~~~~~~~~~^~~~~~~~~~~~
       deleteTree
The code did not compile.  This test failed.
-----------------------------------------------
testcase 2 : Testing with BstMap<int,std::string>
...compiling...
In file included from 89-tester.cpp:1:0:
bstmap.h: In instantiation of ‘BstMap<K, V>& BstMap<K, V>::operator=(const BstMap<K, V>&) [with K = int; V = std::__cxx11::basic_string<char>]’:
89-tester.cpp:131:10:   required from here
bstmap.h:80:18: error: ‘delete_tree’ was not declared in this scope
       delete_tree(this->root);
       ~~~~~~~~~~~^~~~~~~~~~~~
bstmap.h:80:18: note: suggested alternative: ‘deleteTree’
       delete_tree(this->root);
       ~~~~~~~~~~~^~~~~~~~~~~~
       deleteTree
The code did not compile.  This test failed.
-----------------------------------------------
testcase 3 : Testing with BstMap<int,(a custom class we wrote)>
...compiling...
In file included from 89-tester.cpp:1:0:
bstmap.h: In instantiation of ‘BstMap<K, V>& BstMap<K, V>::operator=(const BstMap<K, V>&) [with K = int; V = Tester]’:
89-tester.cpp:131:10:   required from here
bstmap.h:80:18: error: ‘delete_tree’ was not declared in this scope
       delete_tree(this->root);
       ~~~~~~~~~~~^~~~~~~~~~~~
bstmap.h:80:18: note: suggested alternative: ‘deleteTree’
       delete_tree(this->root);
       ~~~~~~~~~~~^~~~~~~~~~~~
       deleteTree
The code did not compile.  This test failed.
-----------------------------------------------
testcase 4 : Testing with BstMap<std::string,int>
...compiling...
In file included from 89-tester.cpp:1:0:
bstmap.h: In instantiation of ‘BstMap<K, V>& BstMap<K, V>::operator=(const BstMap<K, V>&) [with K = std::__cxx11::basic_string<char>; V = int]’:
89-tester.cpp:131:10:   required from here
bstmap.h:80:18: error: ‘delete_tree’ was not declared in this scope
       delete_tree(this->root);
       ~~~~~~~~~~~^~~~~~~~~~~~
bstmap.h:80:18: note: suggested alternative: ‘deleteTree’
       delete_tree(this->root);
       ~~~~~~~~~~~^~~~~~~~~~~~
       deleteTree
The code did not compile.  This test failed.
-----------------------------------------------
testcase 5 : Testing with BstMap<std::string,std::string>
...compiling...
In file included from 89-tester.cpp:1:0:
bstmap.h: In instantiation of ‘BstMap<K, V>& BstMap<K, V>::operator=(const BstMap<K, V>&) [with K = std::__cxx11::basic_string<char>; V = std::__cxx11::basic_string<char>]’:
89-tester.cpp:131:10:   required from here
bstmap.h:80:18: error: ‘delete_tree’ was not declared in this scope
       delete_tree(this->root);
       ~~~~~~~~~~~^~~~~~~~~~~~
bstmap.h:80:18: note: suggested alternative: ‘deleteTree’
       delete_tree(this->root);
       ~~~~~~~~~~~^~~~~~~~~~~~
       deleteTree
The code did not compile.  This test failed.
-----------------------------------------------
testcase 6 : Testing with BstMap<std::string,(a custom class we wrote)>
...compiling...
In file included from 89-tester.cpp:1:0:
bstmap.h: In instantiation of ‘BstMap<K, V>& BstMap<K, V>::operator=(const BstMap<K, V>&) [with K = std::__cxx11::basic_string<char>; V = Tester]’:
89-tester.cpp:131:10:   required from here
bstmap.h:80:18: error: ‘delete_tree’ was not declared in this scope
       delete_tree(this->root);
       ~~~~~~~~~~~^~~~~~~~~~~~
bstmap.h:80:18: note: suggested alternative: ‘deleteTree’
       delete_tree(this->root);
       ~~~~~~~~~~~^~~~~~~~~~~~
       deleteTree
The code did not compile.  This test failed.
-----------------------------------------------
testcase 7 : Testing with BstMap<(a custom class we wrote),int>
...compiling...
In file included from 89-tester.cpp:1:0:
bstmap.h: In instantiation of ‘BstMap<K, V>& BstMap<K, V>::operator=(const BstMap<K, V>&) [with K = Tester; V = int]’:
89-tester.cpp:131:10:   required from here
bstmap.h:80:18: error: ‘delete_tree’ was not declared in this scope
       delete_tree(this->root);
       ~~~~~~~~~~~^~~~~~~~~~~~
bstmap.h:80:18: note: suggested alternative: ‘deleteTree’
       delete_tree(this->root);
       ~~~~~~~~~~~^~~~~~~~~~~~
       deleteTree
The code did not compile.  This test failed.
-----------------------------------------------
testcase 8 : Testing with BstMap<(a custom class we wrote),std::string>
...compiling...
In file included from 89-tester.cpp:1:0:
bstmap.h: In instantiation of ‘BstMap<K, V>& BstMap<K, V>::operator=(const BstMap<K, V>&) [with K = Tester; V = std::__cxx11::basic_string<char>]’:
89-tester.cpp:131:10:   required from here
bstmap.h:80:18: error: ‘delete_tree’ was not declared in this scope
       delete_tree(this->root);
       ~~~~~~~~~~~^~~~~~~~~~~~
bstmap.h:80:18: note: suggested alternative: ‘deleteTree’
       delete_tree(this->root);
       ~~~~~~~~~~~^~~~~~~~~~~~
       deleteTree
The code did not compile.  This test failed.
-----------------------------------------------
testcase 9 : Testing with BstMap<(a custom class we wrote),(a custom class we wrote)>
...compiling...
In file included from 89-tester.cpp:1:0:
bstmap.h: In instantiation of ‘BstMap<K, V>& BstMap<K, V>::operator=(const BstMap<K, V>&) [with K = Tester; V = Tester]’:
89-tester.cpp:131:10:   required from here
bstmap.h:80:18: error: ‘delete_tree’ was not declared in this scope
       delete_tree(this->root);
       ~~~~~~~~~~~^~~~~~~~~~~~
bstmap.h:80:18: note: suggested alternative: ‘deleteTree’
       delete_tree(this->root);
       ~~~~~~~~~~~^~~~~~~~~~~~
       deleteTree
The code did not compile.  This test failed.

Overall Grade: F
